[gd_scene load_steps=13 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/wizardIdle.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/wizardJump.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/wizardWalk1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/wizardDead.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/wizardAttack2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/wizardAttack.png" type="Texture" id=7]
[ext_resource path="res://Sounds/Jump_03.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/shoot.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/fallDeath2.wav" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "Idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "Jump",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "Dead",
"speed": 0.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Attack",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 7232
limit_bottom = 360

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 26, 3 )

[node name="ShotTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
